objects/smagicinteract__SMS_Template__c.object
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <description>SMS Template is similar to Email template, it gives way to add personalization to bulk sms&apos;ing.</description>
    <fields>
        <fullName>smagicinteract__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Name__c</fullName>
        <description>Name of template</description>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectName__c</fullName>
        <description>Objects for which templates to be created.</description>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Text__c</fullName>
        <description>Text in template</description>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SMS Template</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Name__c</columns>
        <columns>smagicinteract__ObjectName__c</columns>
        <columns>smagicinteract__Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>SMS Templates Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>